add todolist adding page

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,5 +4,6 @@
 <p>Hello <%=currentUser.username%></p>
 
 <a href="/logout">logout</a>
+<a href="/list/new">add todo</a>
 
 <%- include("partials/footer") %>
