--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
                   </li>
                 <%if(currentUser){%>
                     <li class="nav-item">
-                        <a class="nav-link" href="/dashboard">Dashboard</a>
+                        <a class="nav-link" href="/list">Dashboard</a>
                     </li>
                 <%}%>
               </ul>
