--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,18 @@
 <%- include("partials/header") %>
+<div class="container-fluid text-center">
+    <div class="container">
+        <h1>Login</h1>
 
-<h1>Login</h1>
-
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username" required>
-    <input type="password" name="password" placeholder="password" required>
-    <button>Login</button>
-</form>
+        <form action="/login" method="POST">
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="username" required>
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="password" required>
+            </div>
+            <button class="btn btn-success">Login</button>
+        </form>
+    </div>
+</div>
 
 <%- include("partials/footer") %>
