--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,11 +1,19 @@
 <%- include("partials/header") %>
+<div class="container-fluid text-center">
+    <div class="container">
 
-<h1>Sign Up!</h1>
+        <h1>Sign Up!</h1>
 
-<form action="/signup" method="POST">
-    <input type="text" name="username" placeholder="username" required>
-    <input type="password" name="password" placeholder="password" minlength="8" required>
-    <button>Sign Up</button>
-</form>
+        <form action="/signup" method="POST">
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" placeholder="username" required>
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="password" minlength="8" required>
+            </div>
+            <button class="btn btn-success">Sign Up</button>
+        </form>
+    </div>
+</div>
 
 <%- include("partials/footer") %>
