--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,23 +2,42 @@
 
 <div class="container-fluid">
     <div class="container-fluid text-center">
-        <h1><%=todos.length%> todos</h1>
+        <% if(todos.length==0){ %>
+            <h1>Add some todos!</h1>
+        <% } else { %>
+            <h1><%=todos.length%> todos</h1>
+        <% } %>
         <p>Hello <%=currentUser.username%></p>
     </div>
 
     <div class="row">
         <div class="col-xs-0 col-sm-2"></div>
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-1 col-sm-8 tray">
             <form action="/list" method="POST">
-                <input type="text" name="description" placeholder="description" required>
-                <button class="btn btn-success">Add new todo</button>
+                <div class="input-group">
+                    <input class="form-control"type="text" name="description" placeholder="description" required>
+                    <div class="input-group-append">
+                        <button class="btn btn-success">Add new todo</button>
+                    </div>
+                </div>
             </form>
             <% todos.forEach(function(todo){ %>
-                <div>
-                    <p><%=todo.description%></p>
-                    <form action="/list/<%=todo._id%>/delete?_method=DELETE" method="POST">
-                        <button class="btn btn-info">Done</button>
-                    </form>
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-3">
+                                <form action="/list/<%=todo._id%>/delete?_method=DELETE" method="POST">
+                                    <button class="btn btn-info">Finish!</button>
+                                </form>
+                            </div>
+                            <div class="col-6">
+                                <p><%=todo.description%></p>
+                            </div>
+                            <div class="col-3">
+                                <p><%=todo.created.toLocaleDateString()%></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             <% }) %>
         </div>
