--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,6 +35,9 @@
                 </li>
             <%} else {%>
                 <li class="nav-item">
+                    <a class="nav-link" href="/user/<%=currentUser._id%>"><%=currentUser.username%></a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
             <% } %>
